--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,17 @@ body{
     margin: 0;
 }
 
+#page-wrapper {
+    position: relative;
+}
+
 #header{
     background-color: rgb(0, 104, 104);
     display: flex;
     justify-content: space-between;
     height: 100px;
+    position: fixed;
+    width: 100%;
 }
 
 #header-img{
@@ -59,6 +65,7 @@ body{
     width: 80%;
     margin: auto;
     font-family: sans-serif;
+    padding-top: 110px;
 }
 
 #ft-head{
